# learn-celery

./: Dockerfile  docker-compose.yaml  logging.conf  pyproject.toml  requirements.txt
src/: main.py
src/worker/: celery_config.py  consumer.py  tasks.py
